--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
